feat: minor refactor